sqlx_insert/tests/ui/unknown_database.stderr
error: batch_insert only works for postgres for now
 --> tests/ui/unknown_database.rs:5:1
  |
5 | / #[sqlx_insert(database(MariaDB))]
6 | | pub struct Thing {
7 | |     id: String,
8 | |     amount: i32,
9 | | }
  | |_^
